@@ -13,44 +13,47 @@ import ec.edu.ups.icc.fundamentos01.exceptions.domain.ConflictException;
 @Service
 public class CategoriaServiceImpl implements CategoriaService {
 
-    private final CategoryRepository categoryRepository;
+    private final CategoryRepository repository;
 
-    public CategoriaServiceImpl(CategoryRepository categoryRepository) {
-        this.categoryRepository = categoryRepository;
+    public CategoriaServiceImpl(CategoryRepository repository) {
+        this.repository = repository;
     }
 
     @Override
     public List<CategoriaResponseDto> findAll() {
-        return categoryRepository.findAll()
+        return repository.findAll()
                 .stream()
                 .map(entity -> {
                     CategoriaResponseDto dto = new CategoriaResponseDto();
-                    dto.setId(entity.getId());
-                    dto.setName(entity.getName());
-                    dto.setDescription(entity.getDescription());
+                    dto.id = entity.getId();
+                    dto.name = entity.getName();
+                    dto.description = entity.getDescription();
                     return dto;
                 })
                 .toList();
     }
 
-
     @Override
-    public void save(CreateCategoriaDto categoriaDto) {
-
-        if (categoriaDto.name == null || categoriaDto.name.trim().isBlank()) {
-            throw new IllegalArgumentException("El nombre de la categoria es obligatorio");
+    public void save(CreateCategoriaDto dto) {
+        // Valida que el nombre no sea nulo
+        if (dto.name == null || dto.name.trim().isEmpty()) {
+            throw new IllegalArgumentException("El nombre de la categoría no puede ser nulo o vacío");
         }
 
-        categoryRepository.findByNameIgnoreCase(categoriaDto.name)
+        // Valida que no exista una categoria con el mismo nombre
+        repository.findByNameIgnoreCase(dto.name)
                 .ifPresent(existingCategory -> {
-                    throw new ConflictException("Ya existe una categoria con el nombre: " + categoriaDto.name);
+                    throw new ConflictException("Ya existe esa categoria" + dto.name);
                 });
 
-        CategoryEntity entity = new CategoryEntity();
-        entity.setName(categoriaDto.name);
-        entity.setDescription(categoriaDto.description);
-        categoryRepository.save(entity);
+        // Crear la entidad de categoria
 
+        CategoryEntity entity = new CategoryEntity();
+        entity.setName(dto.name);
+        entity.setDescription(dto.description);
+
+        // Guardar la entidad en la base de datos
+        repository.save(entity);
     }
 
 }
